--- a/frontend/.github/workflows/render.yml
+++ b/frontend/.github/workflows/render.yml
@@ -13,16 +13,18 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup  Node.Js
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: "20"
-      
+
       - name: Install dependencies
         run: npm install
+        working-directory: ./frontend
 
       - name: Generate Prisma Client
         run: npx prisma generate
+        working-directory: ./frontend
 
       - name: Deploy to Render
         uses: johnbeynon/render-deploy-acion@v0.0.8
